Update styles: fix layout issues, add header background, improve spacing

--- a/style.css
+++ b/style.css
@@ -1,44 +1,109 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
-  font-family: CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, "Helvetica Neue", Helvetica, Arial, "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, "MS Gothic", sans-serif;
-  margin: 0;
-  padding: 0;
+    font-family: CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl,
+        CircularSp-Grek, CircularSp-Deva, "Helvetica Neue", Helvetica, Arial,
+        "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, "MS Gothic",
+        sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  font-size: 16px;
-  font-weight: 700;
-  color: rgb(255, 255, 255);
+    background-color: black;
+    font-size: 16px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    overflow-x: hidden;
 }
 
 .left {
-  width: 25vw;
-  padding: 10px;
+    width: 25vw;
 }
+
 .right {
-  width: 75vw;
+    width: 75vw;
+    padding: 10px;
 }
 
 .home ul li {
-  padding-top: 14px;
-  gap: 15px;
-  display: flex;
-  list-style: none;
-  width: 14px;
-  font-weight: bold;
+    padding-top: 14px;
+    gap: 15px;
+    display: flex;
+    list-style: none;
+    width: 14px;
+    font-weight: bold;
+}
+
+.library {
+    min-height: 72vh;
+    position: relative;
 }
 
 .heading img {
-  width: 16px;
+    width: 16px;
 }
 
 .heading {
-  padding-top: 14px;
-  gap: 10px;
-  display: flex;
-  width: 100%;
-  font-weight: bold;
-  align-items: center;
-  font-size: 12px;
+    padding-top: 14px;
+    gap: 10px;
+    display: flex;
+    width: 100%;
+    font-weight: bold;
+    align-items: center;
+    font-size: 12px;
+}
+.footer {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+}
+
+.left footer ul li {
+    font-family: CircularSp, sans-serif;
+    font-size: 11px;
+    font-weight: 400;
+    color: #b3b3b3;
+    padding: 8px 0;
+    cursor: pointer;
+    display: inline-block;
+    margin-right: 8px;
+    list-style: none;
+}
+
+.header {
+    border-radius: 8px;
+    background-color: rgb(34,34,34);
+    color: #656565;
+    display: flex;
+    justify-content: space-between;
+}
+.header > * {
+    padding: 20px;
+}
+.nav {
+    display: flex;
+}
+
+.container {
+    gap: 8px;
+    padding: 8px;
+    height: 100vh;
+}
+
+.spotifyPlaylist{
+    padding: 16px;
+}
+
+.card{
+    background-color: rgb(24, 24, 24);
+    padding: 16px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.card:hover {
+    background-color: rgb(40, 40, 40);
 }
